# arc-selective-forgetting

./: .gitignore  README.md  pyproject.toml
.github/workflows/: actions.yml
configs/: README.md
configs/data/: example_tofu_1.yaml  example_tofu_2.yaml  example_tofu_full.yaml  gen_tofu_author_10.yaml  gen_tofu_author_15.yaml  gen_tofu_author_20.yaml  gen_tofu_author_25.yaml  gen_tofu_author_5.yaml  gen_tofu_book_10.yaml  gen_tofu_book_15.yaml  gen_tofu_book_20.yaml  gen_tofu_book_25.yaml  gen_tofu_book_5.yaml  gen_tofu_full.yaml  gen_tofu_publisher_10.yaml  gen_tofu_publisher_15.yaml  gen_tofu_publisher_20.yaml  gen_tofu_publisher_25.yaml  gen_tofu_publisher_5.yaml  gen_tofu_question_10.yaml  gen_tofu_question_15.yaml  gen_tofu_question_20.yaml  gen_tofu_question_25.yaml  gen_tofu_question_5.yaml  gen_tofu_rel_1.yaml  gen_tofu_rel_10.yaml  gen_tofu_rel_15.yaml  gen_tofu_rel_2.yaml  gen_tofu_rel_20.yaml  gen_tofu_rel_25.yaml  gen_tofu_rel_3.yaml  gen_tofu_rel_4.yaml  gen_tofu_rel_5.yaml  gen_tofu_rel_6.yaml
configs/experiment/: example_experiment_config.yaml  example_top_experiment_config.yaml  experiment_1_granularity.yaml  experiment_1_granularity_gpt2.yaml  experiment_1_granularity_gpt2_longer_train.yaml  experiment_1_granularity_gpt2_one_each.yaml  experiment_1_granularity_gpt2_remaining.yaml  experiment_1_granularity_llama.yaml  experiment_1_granularity_llama_seeds.yaml  experiment_1_granularity_phi.yaml  experiment_1_granularity_phi_seeds.yaml  experiment_2_relationships_gpt2.yaml  experiment_2_relationships_gpt2_longer_train copy.yaml  experiment_2_relationships_llama.yaml  experiment_2_relationships_phi.yaml  gpt2_longer_experiment.yaml  gpt2_longer_experiment_all.yaml  gpt2_longer_experiment_full.yaml  gpt2_longer_experiment_retain.yaml  llama3_test.yaml  one_model_each_gpt2.yaml  phi3_mini_test.yaml  phi3_small_test.yaml  sweep_gpt2.yaml  sweep_llama.yaml  sweep_phi.yaml  tofu_test.yaml
configs/forget/: gpt2_ascent.yaml  gpt2_diff.yaml  gpt2_idk.yaml  gpt2_kl.yaml
configs/model/: gpt2.yaml  gpt2_forget.yaml  gpt2_longer.yaml  gpt2_short.yaml
data/gen_tofu/: all_connections.csv  all_items.json
scripts/: README.md  all_eval.py  analysis.py  eval.py  example_slurm_script.sh  experiment_analysis.py  full_eval.py  gen_configs.py  get_eval_paths.py  get_train_evals_to_run.py  gpt2_forget.sh  gpt2_longer.sh  gpt2_longer_all.sh  gpt2_longer_retain.sh  model_analysis.py  sweep.py  token_analysis.py  token_loss_eval.py  train.py  update_eval_outputs.py
src/arcsf/: __init__.py  constants.py  data_test.py  utils.py
tests/: conftest.py  test_data.py  test_data_config.py  test_data_module.py  test_eval.py  test_experiment_config.py  test_forget.py  test_mock.py  test_model_config.py  test_tofu.py
tests/data/: README.md  make_base_model.py  (+6 more)
train_scripts/: queue_all.sh  sweep.sh
(+188 files in other folders)
