[tool.poetry]
name = "arcsf"
version = "0.1.0"
description = ""  # TODO
authors = ["Applied Research Centre, The Alan Turing Institute <arc@turing.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^2.18.0"
tokenizers = "^0.15.2"
transformers = "^4.39.3"
torch = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
peft = "^0.10.0"
jinja2 = "^3.1.3"
wandb = "^0.16.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-mock = "^3.12.0"
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
known_third_party = ["wandb"]
known_first_party = ["arcsf"]
