[tool.poetry]
name = "arcsf"
version = "0.1.0"
description = ""  # TODO
authors = ["Applied Research Centre, The Alan Turing Institute <arc@turing.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^2.20.0"
jinja2 = "^3.1.4"
numpy = "^1.26.4"
peft = "^0.11.1"
scikit-learn = "^1.5.0"
tokenizers = "^0.19.1"
torch = "^2.3.1"
transformers = {extras = ["torch"], version = "^4.41.2"}
tqdm = "^4.66.4"
wandb = "^0.17.1"
rouge-score = "^0.1.2"
matplotlib = "^3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
pre-commit = "^3.7.1"


[tool.poetry.group.notebook.dependencies]
jupyterlab = "^4.2.2"
ipywidgets = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
known_third_party = ["wandb"]
known_first_party = ["arcsf"]
